[project]
name = "agent-hub-debug"
version = "0.1.0"
description = "MCP server for CloudWatch log querying"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.5.0",
    "mcp>=1.13.1",
    "httpx>=0.28.1",
    "boto3>=1.35.93",
    "fastmcp>=2.14.1",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
# Run with: `uv run roto-debug`
agent-hub-debug = "mcp_server.server:main"
